--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 <body>
 
     <div class="card" id="card">
-        <h2>¿Aceptas ser mi novia?</h2>
+        <h2>¿Aceptas salir conmigo❤️?</h2>
         <button id="yesBtn">Sí</button>
         <button id="noBtn">No</button>
     </div>
-
+    <div id="heart-container"></div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
     <script src="script.js"></script>
+    <div id="heart-container"></div>
 
 </body>
 </html>
